# pants-cargo-porcelain

./: .gitignore  BUILD  README.md  pants.toml  pyproject.toml
.github/: labeler.yml  labels.yml
.github/workflows/: docs.yml  labeler.yaml  main.yml  pre-release.yaml
examples/: BUILD
examples/axum-hello-world/: Cargo.toml
examples/docker-cross-compile/: BUILD  Cargo.toml  Dockerfile  README.md
examples/hello-world/: BUILD  Cargo.toml
pants-backends/: BUILD
pants-plugins/: BUILD
pants-plugins/cargo-porcelain/: pyproject.toml
pants-plugins/cargo-porcelain/pants_cargo_porcelain/: register.py  subsystems.py  subsystems_test.py  target_generator.py  target_types.py  tool.py  tool_rules.py  tool_test.py
pants-plugins/cargo-porcelain/pants_cargo_porcelain/backends/clippy/: subsystem.py  subsystem_test.py
pants-plugins/cargo-porcelain/pants_cargo_porcelain/backends/clippy/goals/: lint.py
pants-plugins/cargo-porcelain/pants_cargo_porcelain/backends/python/: register.py  targets.py
pants-plugins/cargo-porcelain/pants_cargo_porcelain/goals/: BUILD  fmt.py  generate_lockfiles.py  generate_lockfiles_test.py  lock.py  package.py  run.py  tailor.py  tailor_test.py  test.py
pants-plugins/cargo-porcelain/pants_cargo_porcelain/internal/: build.py  platform.py
pants-plugins/cargo-porcelain/pants_cargo_porcelain/tools/: binstall.py  binstall_test.py  mtime.py
pants-plugins/cargo-porcelain/pants_cargo_porcelain/util_rules/: cargo.py  dependency_inference.py  dependency_inference_test.py  rustup.py  sandbox.py  workspace.py  workspace_test.py
(+47 files in other folders)
